--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,14 @@
 <html>
-<head></head>
+<head>
+<script src="jquery-1.11.3.min.js"></script>
+</head>
 <body>
-<%= jira.id %>
+
+<script type="text/javascript">
+  $.ajax({})
+  xmlhttp.open("GET","https://jira.freewebs.com/rest/api/2/issue/DG-2079",true);
+  xmlhttp.send();
+  </script>
+
 </body>
 </html>
