Lev -added searchbar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <head>
     
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<link rel="stylesheet" href="../custom.css"
+<link rel="stylesheet" href="custom.css">
 </head>
 <body>
     <%= jira.id %>
