Lev- added button listener

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,8 @@
     
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="custom.css">
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
 </head>
 <body>
     <%= jira.id %>
@@ -24,6 +26,7 @@
 </div>
 
 <!-- Latest compiled and minified JavaScript -->
+<script type="text/javascript" src="functions.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
