--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,8 @@
             </div>
         </div>
     </div>
+
+    <div class="items"></div>
 </div>
 
 <!-- Latest compiled and minified JavaScript -->
