First pass at front end styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,95 @@
 <html>
-<head></head>
+<head>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <style>
+    html {
+      background: rgba(220,231,235,1);
+    }
+    body {
+      /*display: inline-block;*/
+      width: 960px;
+      margin: 0 auto;
+      background: rgba(254,255,250,1);
+      font: normal 14px/1.4em 'Lato', sans-serif;
+    }
+    ul, ol {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+    }
+    .ticket-table {
+      padding-left: 20px
+    }
+    ol > li {
+      display: inline-block;
+      padding: 10px;
+    }
+    li > a {
+      text-decoration: none;
+      color: #2BA8E0;
+      font-weight: bold;
+    }
+    li > a:hover {
+      text-decoration: underline;
+      color: #1E96CC;
+    }
+    .ticket-table {
+    }
+    .header {
+      font-weight: bold;
+      font-size: 1.6em;
+      border-bottom: 1px solid rgba(220,231,235,1);
+    }
+    .row {
+      border-bottom: 1px solid rgba(220,231,235,1);
+    }
+    .key {
+      width: 180px;
+    }
+    .summary {
+      width: 480px;
+    }
+    .status {
+      width: 80px;
+    }
+    .ticket-desc {
+      padding: 10px;
+    }
+
+  </style>
+</head>
 <body>
-<%= jira.id %>
+<ul class="ticket-table">
+  <li class="header">
+    <ol>
+      <li class="key">
+        Issue Number
+      </li>
+      <li class="summary">
+        Summary
+      </li>
+      <li class="status">
+        Status
+      </li>
+    </ol>
+  </li>
+
+  <li class="row">
+    <ol>
+      <li class="key">
+        <a href="https://jira.freewebs.com/browse/<%= jira.key %>">
+          <%= jira.key %>
+        </a>
+      </li>
+      <li class="summary" title="<%= jira.fields.description %>">
+        <%= jira.fields.summary %>
+      </li>
+      <li class="status" title="<%= jira.fields.status.description %>">
+        <%= jira.fields.status.name %>
+      </li>
+    </ol>
+    <p class="ticket-desc"><strong>Description: </strong><%= jira.fields.description %></p>
+  </li>
+</ul>
 </body>
 </html>
