--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div class="container">
+    <div id="container-jira">
        <div class="row">
           <h2>Stylish Search Box</h2>
           <div id="custom-search-input">
