--- a/public/custom.css
+++ b/public/custom.css
@@ -1,5 +1,15 @@
 
 
+#container-jira{
+  text-align: center;
+  padding: 0 50px;
+}
+
+#container-jira > .row {
+    margin: 0;
+    border-bottom: none;
+}
+
 #custom-search-input {
         margin:0;
         margin-top: 10px;
