Updates tool title

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 
     <div id="container-jira">
        <div class="row">
-          <h2>Stylish Search Box</h2>
+          <h2>CARE Search</h2>
           <div id="custom-search-input">
             <div class="input-group col-md-12">
                 <input type="text" class="  search-query form-control" placeholder="Search" />
